samples/_failures_safe/1761481811_27ffb4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_32f84a46.c: In function ‘main’:
./samples/SAFE/__tmp_32f84a46.c:134:9: error: ‘destroy’ undeclared (first use in this function)
  134 |         destroy
      |         ^~~~~~~
./samples/SAFE/__tmp_32f84a46.c:134:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_32f84a46.c:134:16: error: expected ‘;’ at end of input
  134 |         destroy
      |                ^
      |                ;
./samples/SAFE/__tmp_32f84a46.c:134:9: error: expected declaration or statement at end of input
  134 |         destroy
      |         ^~~~~~~
./samples/SAFE/__tmp_32f84a46.c:134:9: error: expected declaration or statement at end of input
